Simplify to allow player experience to be fed to model